terraformLBexample.tf
# Define Azure provider and resource group
provider "azurerm" {
  features {}
}

resource "azurerm_resource_group" "example" {
  name     = "example-resource-group"
  location = "eastus"
}

# Define virtual network and subnet
resource "azurerm_virtual_network" "example" {
  name                = "example-vnet"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name

  subnet {
    name           = "example-subnet"
    address_prefix = "10.0.1.0/24"
  }
}

# Define network security group
resource "azurerm_network_security_group" "example" {
  name                = "example-nsg"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name

  # Allow traffic from subnet to subnet
  security_rule {
    name                       = "allow-subnet-to-subnet"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_address_prefix      = "10.0.1.0/24"
    destination_address_prefix = "10.0.1.0/24"
  }
}

# Define load balancer
resource "azurerm_lb" "example" {
  name                = "example-lb"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name

  frontend_ip_configuration {
    name                          = "example-lb-fe"
    subnet_id                     = azurerm_virtual_network.example.subnet.id
    private_ip_address_allocation = "Dynamic"
  }

  backend_address_pool {
    name = "example-lb-be"
  }

  # Define health probe for load balancer
  probe {
    name = "example-lb-probe"
    protocol = "tcp"
    port = 80
    interval = 15
    threshold = 2
  }

  # Define load balancing rule
  rule {
    name = "example-lb-rule"
    protocol = "tcp"
    frontend_port = 80
    backend_port = 80
    frontend_ip_configuration_name = "example-lb-fe"
    backend_address_pool_name = "example-lb-be"
    probe_name = "example-lb-probe"
  }
}

# Define virtual machine
resource "azurerm_linux_virtual_machine" "example" {
  name                = "example-vm"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name
  size                = "Standard_DS1_v2"

  # Use Ubuntu Server 18.04 LTS for the virtual machine
  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "18.04-LTS"
    version   = "latest"
  }

  storage_os_disk {
    name              = "example-vm-osdisk"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }

  os_profile {
    computer_name  = "example-vm"
    admin_username = "adminuser"
  }

  os_profile_linux_config {
    disable_password_authentication = true

    ssh
